fixed path issues and reverted to previous version

--- a/portfolio/advanced-clustering.html
+++ b/portfolio/advanced-clustering.html
@@ -15,7 +15,7 @@ padding-left: 25px;
 
 .columns-container {
 display: flex;
-justify-content: center;   /* Center the columns horizontally */
+justify-content: center;
 }
 
 div.toc-content.col-xs-12.col-sm-8.col-md-9 {
@@ -50,7 +50,7 @@ align-items: center;
           flex-direction: column;
       }
       .column {
-          width: 100%; /* Full width columns on smaller screens */
+          width: 100%; 
       }
   }
 
@@ -170,7 +170,7 @@ color: rgb(253, 253, 253);
 .sidebar .user__pic {
   width: 10rem;
   height: 10rem;
-  background: url(/images/cluster.png);
+  background: url(../images/cluster.png);
   background-size: cover;
   margin-right: 0.5rem;
   border-radius: 50%;
@@ -1855,7 +1855,7 @@ display: none;
       <div class="options">
       <ul>
         <li>
-          <a href="/portfolio/projects.html">Return to projects</a>
+          <a href="./projects.html">Return to projects</a>
           </li>
         <span class="options__division">Sections</span>
         <li><a href="#tooth-data-analysis">Unlocking Patterns in Tooth Data (Dentition of Mammals)</a></li>
