--- a/portfolio/advanced-decision-tree-classifier-US-Census.html
+++ b/portfolio/advanced-decision-tree-classifier-US-Census.html
@@ -170,7 +170,7 @@ div.toc-content.col-xs-12.col-sm-8.col-md-9 {
     .sidebar .user__pic {
         width: 10rem;
         height: 10rem;
-        background: url(/images/census.png);
+        background: url(../images/census.png);
         background-size: cover;
         margin-right: 0.5rem;
         border-radius: 50%;
@@ -3192,7 +3192,7 @@ border-radius: 0px;
     <div class="bar">
       <div class="options">
         <ul>
-          <li><a href="/portfolio/projects.html">Return to projects</a></li>
+          <li><a href="./projects.html">Return to projects</a></li>
           <span class="options__division">Sections</span>
           <li><a href="#data-cleaning-overview">Data Cleaning & Preparation</a></li>
           <li><a href="#decision-tree">Model 1 Analysis and Development</a></li>
