--- a/portfolio/advertisement-analysis.html
+++ b/portfolio/advertisement-analysis.html
@@ -155,7 +155,7 @@
     .sidebar .user__pic {
         width: 10rem;
         height: 10rem;
-        background: url(/images/data_analysis.png);
+        background: url(../images/data_analysis.png);
         background-size: cover;
         margin-right: 0.5rem;
         border-radius: 50%;
@@ -1837,7 +1837,7 @@ display: none;
     <div class="options">
     <ul>
       <li>
-        <a href="/portfolio/projects.html">Return to projects</a>
+        <a href="./projects.html">Return to projects</a>
         </li>
       <span class="options__division">Sections:</span>
                 <li>
