--- a/portfolio/associate-rule-mining-apriori-algorithm.html
+++ b/portfolio/associate-rule-mining-apriori-algorithm.html
@@ -170,7 +170,7 @@ div.toc-content.col-xs-12.col-sm-8.col-md-9 {
     .sidebar .user__pic {
         width: 10rem;
         height: 10rem;
-        background: url(/images/bakery.png);
+        background: url(../images/bakery.png);
         background-size: cover;
         margin-right: 0.5rem;
         border-radius: 50%;
@@ -3191,7 +3191,7 @@ border-radius: 0px;
     <div class="bar">
       <div class="options">
         <ul>
-          <li><a href="/portfolio/projects.html">Return to projects</a></li>
+          <li><a href="./projects.html">Return to projects</a></li>
           <span class="options__division">Sections</span>
           <li><a href="#1k-transactions">1,000 Transactions Dataset</a></li>
           <li><a href="#5k-transactions">5,000 Transactions Dataset</a></li>
