--- a/portfolio/decision-tree-classifier-hotel-booking-cancellations.html
+++ b/portfolio/decision-tree-classifier-hotel-booking-cancellations.html
@@ -170,7 +170,7 @@ div.toc-content.col-xs-12.col-sm-8.col-md-9 {
     .sidebar .user__pic {
         width: 10rem;
         height: 10rem;
-        background: url(/images/hotel.png);
+        background: url(../images/hotel.png);
         background-size: cover;
         margin-right: 0.5rem;
         border-radius: 50%;
@@ -1847,7 +1847,7 @@ display: none;
       <div class="options">
       <ul>
         <li>
-          <a href="/portfolio/projects.html">Return to projects</a>
+          <a href="./projects.html">Return to projects</a>
           </li>
         <span class="options__division">Sections</span>
         <li><a href="#data-cleaning-overview">Exploratory Data Analysis</a></li>
