--- a/portfolio/linear-regression.html
+++ b/portfolio/linear-regression.html
@@ -155,7 +155,7 @@
     .sidebar .user__pic {
         width: 10rem;
         height: 10rem;
-        background: url(/images/car-linear-regression.png);
+        background: url(../images/car-linear-regression.png);
         background-size: cover;
         margin-right: 0.5rem;
         border-radius: 50%;
@@ -1909,7 +1909,7 @@ display: none;
       <div class="options">
       <ul>
         <li>
-          <a href="/portfolio/projects.html">Return to projects</a>
+          <a href="./projects.html">Return to projects</a>
           </li>
         <span class="options__division">Sections</span>
         <li><a href="#part-2.1">Data Preparation and Splitting</a></li>
