--- a/portfolio/neural-network-wifi.html
+++ b/portfolio/neural-network-wifi.html
@@ -170,7 +170,7 @@ div.toc-content.col-xs-12.col-sm-8.col-md-9 {
     .sidebar .user__pic {
         width: 10rem;
         height: 10rem;
-        background: url(/images/neural-network.png);
+        background: url(../images/neural-network.png);
         background-size: cover;
         margin-right: 0.5rem;
         border-radius: 50%;
@@ -3192,7 +3192,7 @@ border-radius: 0px;
     <div class="bar">
       <div class="options">
         <ul>
-          <li><a href="/portfolio/projects.html">Return to projects</a></li>
+          <li><a href="./projects.html">Return to projects</a></li>
           <span class="options__division">Sections</span>
           <li><a href="#decision-tree-model">Introduction: Building a Decision Tree Model</a></li>
           <li><a href="#decision-tree-results">Decision Tree Results Summary</a></li>
@@ -3444,7 +3444,7 @@ This lack of improvement in both loss and accuracy suggests that my model’s cu
 </p>
 
 <video width="740" height="460" controls>
-  <source src="/videos/NeuralNetworkTraining.mp4" type="video/mp4">
+  <source src="../videos/NeuralNetworkTraining.mp4" type="video/mp4">
   Your browser does not support the video tag.
 </video>
 
