--- a/maintenance-notifications/under-construction.html
+++ b/maintenance-notifications/under-construction.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>Under Construction</title>
     <link href='//use.fontawesome.com/releases/v5.12.1/css/all.css' rel='stylesheet'/>
-    <link href='/CSS/under-construction.css' rel='stylesheet'/>
+    <link href='../CSS/under-construction.css' rel='stylesheet'/>
 </head>
 <body>
     <div class='under'>
